fixed load button visibility on desktop

--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -14,3 +14,12 @@
     display: flex;
     justify-content: center;
 }
+
+/* For desktop */
+@media only screen and (min-width: 600px) {
+    .button {
+        width: 45%;
+        height: 40px;
+        margin-bottom: 10px;
+    }
+}
