--- a/src/Components/NewPosts/NewPosts.module.css
+++ b/src/Components/NewPosts/NewPosts.module.css
@@ -10,3 +10,10 @@
 .container {
     height: 595px;
 }
+
+/* For desktop */
+@media only screen and (min-width: 600px) {
+    .PostContainer{
+        height: 462px;
+    }
+}
